--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.3.0-rc2-beta2
+** new format option %f
+This options displays the frame number the window is in or a space if
+it is not in a window.
+
 * Changes since 1.3.0-rc2-beta1
 ** New command 'set'
 set replaces the def* commands. For example 'defwinliststyle column'
