--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 This options displays the frame number the window is in or a space if
 it is not in a window.
 
+** Super modifier changed from S to s. S is now the shift modifier
+
 * Changes since 1.3.0-rc2-beta1
 ** New command 'set'
 set replaces the def* commands. For example 'defwinliststyle column'
