--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ it is not in a window.
 
 ** Super modifier changed from S to s. S is now the shift modifier
 
+** window list style is columnar by default
+
 * Changes since 1.3.0-rc2-beta1
 ** New command 'set'
 set replaces the def* commands. For example 'defwinliststyle column'
