--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0
+** new command, sselect
+sselect lets you jump to an X11 screen by number.
+
 ** configure script warns about missing history lib
 Rather than error out, now, ratpoison will just be built without history.
 
