--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0
+** version now displays the date and time
+
 ** new command, sselect
 sselect lets you jump to an X11 screen by number.
 
