(parse_wingravity): accept numbers for gravity.

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,3 +31,4 @@ Thien-Thi Nguyen <ttn@glug.org>
 Joshua Neuheisel <jneuheisel@msn.com>
 Sylvain BEUCLER <beuc@beuc.net>
 Cameron Patrick <cameron@patrick.wattle.id.au>
+Trent Buck <fubarbaz@bigpond.com>
