* src/main.c (print_version): update copyright date.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-10-05  Shawn Betts  <katia_dilkina@verizon.net>
 
+	* src/main.c (print_version): update copyright date.
+
 	* src/conf.h (DEFAULT_FONT): new define
 
 	* src/main.c (init_defaults): use the DEFAULT_FONT define
