Add a -f option to forcefully create symlinks of missing files.

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,7 +27,7 @@ Pasi Kallinen <pkalli@cs.joensuu.fi>
 Rupert <rupert.debian@hotpop.com>
 Tim Goodwin <tjg@star.le.ac.uk>
 Joshua Neuheisel <jneuheisel@msn.com>
-Thien-Thi Nguyen <ttn@glug.org>
+Thien-Thi Nguyen <ttn@surf.glug.org>
 Joshua Neuheisel <jneuheisel@msn.com>
 Sylvain BEUCLER <beuc@beuc.net>
 Cameron Patrick <cameron@patrick.wattle.id.au>
