--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2002-02-05  Shawn Betts  <katia_dilkina@verizon.net>
+2002-02-05  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (cmd_set): check if var is NULL before checking strlen(var)
 
