--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-11-11  Shawn Betts  <katia_dilkina@verizon.net>
+
+	* src/actions.c (cmd_ratclick): new function
+	(cmd_ratrelwarp): likewise
+	(cmd_ratwarp): likewise
+	(user_commands): new commands ratclick, ratrelwarp, ratwarp.
+
+	* contrib/genrpbindings: add common lisp bindings
+
 2004-11-03  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/input.c (get_more_input): call history_reset
