--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ sselect lets you jump to an X11 screen by number.
 ** configure script warns about missing history lib
 Rather than error out, now, ratpoison will just be built without history.
 
+** new commands ratwarp, ratrelwarp, and ratclick
+
 * Changes since 1.3.0-rc2-beta2
 ** new format option %f
 This options displays the frame number the window is in or a space if
