--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,24 @@
-2004-11-17  Shawn Betts  <katia_dilkina@verizon.net>
+2004-11-17  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/actions.c (cmd_rathold): new function
+
+2004-11-17  Bernhard R. Link <brlink@debian.org>
+
+	* src/actions.c: (initialize_default_keybindings): Added 
+	default keybindings for focusleft,fcousup,focusright,focusdown.
+	(cmd_resize): Added support for	multiple keybindings
+	per action. Added arrow keys, escape and vi-like h,j,k,l
+	to the keys used for resizing.
+
+	* doc/ratpoison.1: Documented C-t arrow key
+	* doc/ratpoison.texi: Documented C-t arrow key,
+	fixed description of C-t f
+
+2004-11-17  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* contrib/rpws: use env to find out where bash is
 
-2004-11-11  Shawn Betts  <katia_dilkina@verizon.net>
+2004-11-11  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* contrib/genrpbindings: fix up path to ratpoison binary
 
