--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -111,7 +111,14 @@ Banish the mouse to the lower right corner of the screen.
 Display a help screen
 .TP
 .B C\-t f, C\-t C\-f
+Select a frame by number.
+.TP
+.B C\-t F
 Indicate which frame is the current frame.
++.TP
++.B C\-t arrow key
++Move to the frame adjoining the current frame in the
++given direction.
 .SH COMMANDS
 ratpoison can be controlled with commands (so called colon\-commands).
 The summary of available commands is listed below:
