remove +'s from bad patch application

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -115,10 +115,10 @@ Select a frame by number.
 .TP
 .B C\-t F
 Indicate which frame is the current frame.
-+.TP
-+.B C\-t arrow key
-+Move to the frame adjoining the current frame in the
-+given direction.
+.TP
+.B C\-t arrow key
+Move to the frame adjoining the current frame in the
+given direction.
 .SH COMMANDS
 ratpoison can be controlled with commands (so called colon\-commands).
 The summary of available commands is listed below:
