Updated copyright notices.

--- a/FAQ
+++ b/FAQ
@@ -1,6 +1,12 @@
 -*- outline -*-
 Ratpoison Frequently Asked Questions
 
+Copyright (C) 2000-2004 Shawn Betts
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
+
 * Conceptual Questions
 ** Where does the name `ratpoison' come from?
 
