--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 Ratpoison - Say good-bye to the rodent
 --------------------------------------
 
+Copyright (C) 2000-2004 Shawn Betts
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
+
 About
 -----
 
