--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+Copyright (C) 2000-2004 Shawn Betts
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
+
 * Changes since 1.3.0
 ** version now displays the date and time
 
