update copyright notice

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -512,10 +512,14 @@ User configuration file.
 .SH "REPORTING BUGS"
 Report bugs to <ratpoison\-devel@lists.sourceforge.net>.
 .SH COPYRIGHT
-Copyright \(co 2000, 2001, 2002 Shawn Betts
+Copyright \(co 2000-2004 Shawn Betts
 .br 
-This is free software; see the source for copying conditions. There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.2 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the section entitled "GNU Free
+Documentation License".
 .SH "SEE ALSO"
 ratmenu(1), X(7x)
 .PP
