fixed copyright notice.

--- a/FAQ
+++ b/FAQ
@@ -1,7 +1,7 @@
 -*- outline -*-
 Ratpoison Frequently Asked Questions
 
-Copyright (C) 2000-2004 Shawn Betts
+Copyright (C) 2000, 2001, 2002, 2003, 2004 Shawn Betts
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
